# wslay

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  NEWS  README  README.asciidoc  README.md  README.rst  api_reference.html  configure.ac  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html  wslay.pc.cmake.in
_sources/: api_reference.rst.txt  index.txt
_sources/man/: wslay_event_queue_fragmented_msg.rst.txt
_static/: classic.css
build_files/cmake_modules/: FindCUnit.cmake  FindSphinx.cmake  FindWSLay.cmake
contrib/win32/: wslay.sln  wslay.vcxproj  wslay.vcxproj.filters
doc/: Makefile.am  conf.py  index.rst
doc/man/: wslay_event_queue_fragmented_msg.rst  wslay_event_queue_msg.rst  wslay_event_send.rst  wslay_event_want_read.rst  wslay_event_want_write.rst
doc/sphinx/: CMakeLists.txt  api_reference.rst  conf.py  conf.py.in  index.rst  tutorial.rst
doc/sphinx/man/: wslay_event_config_set_allowed_rsv_bits.rst  wslay_event_config_set_callbacks.rst  wslay_event_config_set_max_recv_msg_length.rst  wslay_event_config_set_no_buffering.rst  wslay_event_context_server_init.rst  wslay_event_get_close_received.rst  wslay_event_get_close_sent.rst  wslay_event_get_queued_msg_count.rst  wslay_event_get_queued_msg_length.rst  wslay_event_get_read_enabled.rst  wslay_event_get_status_code_received.rst  wslay_event_get_status_code_sent.rst  wslay_event_get_write_enabled.rst  wslay_event_queue_close.rst  wslay_event_queue_fragmented_msg.rst  wslay_event_queue_msg.rst  wslay_event_recv.rst  wslay_event_send.rst  wslay_event_set_error.rst  wslay_event_shutdown_read.rst  wslay_event_shutdown_write.rst  wslay_event_want_read.rst  wslay_event_want_write.rst
examples/: CMakeLists.txt  Makefile  Makefile.am  echoserv.cc  fork-echoserv.c  index.html  testclient.cc
examples/nettle/: CMakeLists.txt  fork-echoserv.c  testclient.cc
examples/openssl/: CMakeLists.txt  openssl-echoserv.c
lib/: CMakeLists.txt  Makefile.am  config.h.in  libwslay.pc  libwslay.pc.in  wslay_error.h  wslay_event.c  wslay_event.h  wslay_frame.c  wslay_frame.h  wslay_net.c  wslay_net.h  wslay_queue.c  wslay_queue.h  wslay_session.c  wslay_session.h  wslay_stack.c  wslay_stack.h
lib/include/wslay/: wslay.h  wslayver.h.in
lib/includes/: Makefile.am
lib/includes/wslay/: wslay.h
man/: wslay_event_config_set_allowed_rsv_bits.html  wslay_event_config_set_callbacks.html  wslay_event_config_set_max_recv_msg_length.html  wslay_event_config_set_no_buffering.html  wslay_event_context_server_init.html  wslay_event_get_close_received.html  wslay_event_get_close_sent.html  wslay_event_get_queued_msg_count.html  wslay_event_get_queued_msg_length.html  wslay_event_get_read_enabled.html  wslay_event_get_status_code_received.html  wslay_event_get_status_code_sent.html  wslay_event_get_write_enabled.html  wslay_event_queue_close.html  wslay_event_queue_fragmented_msg.html  wslay_event_queue_msg.html  wslay_event_recv.html  wslay_event_send.html  wslay_event_set_error.html  wslay_event_shutdown_read.html  wslay_event_shutdown_write.html  wslay_event_want_read.html  wslay_event_want_write.html
samples/: echoserv.cc  testclient.cc
src/: CMakeLists.txt  wslay_event.c  wslay_event.h  wslay_frame.c  wslay_frame.h  wslay_net.c  wslay_net.h  wslay_queue.h  wslay_stack.h
tests/: CMakeLists.txt  Makefile.am  main.c  wslay_event_test.c  wslay_event_test.h  wslay_frame_test.c  wslay_frame_test.h  wslay_queue_test.c  wslay_queue_test.h  wslay_session_test.c  wslay_session_test.h  wslay_stack_test.c  wslay_stack_test.h
wslay/: dllmain.c  wslay.vcxproj
